Add MongoDB to Docker

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -5,3 +5,11 @@ services:
       context: ./
     ports:
       - 3000:3000
+    environment:
+      MONGO_URL: "mongodb://mongodb/mirrordb"
+  mongodb:
+    image: mongo:latest
+    volumes:
+      - mongoData:/data/db
+volumes:
+  mongoData:
