--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "handlebars": "^4.5.2",
+    "handlebars-layouts": "^3.1.4",
     "mongoose": "^5.7.11",
     "snoowrap": "^1.20.1"
   }
