--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,12 @@
   "author": "me",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.5.2",
     "handlebars-layouts": "^3.1.4",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^5.7.11",
     "snoowrap": "^1.20.1"
   }
