Updated dockerfile to reflect restructuring.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,10 +7,12 @@ COPY package.json ./
 COPY package-lock.json ./
 RUN npm install
 
+COPY api/ ./api/
+COPY models/ ./models/
 COPY public/ ./public/
 COPY scrapers/ ./scrapers/
 COPY views/ ./views/
-COPY server.js ./
+COPY *.js ./
 
 EXPOSE 3000
 ENTRYPOINT ["npm", "run", "start"]
