--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.5.2",
     "handlebars-layouts": "^3.1.4",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.7.11",
+    "sentiment": "^5.0.2",
     "snoowrap": "^1.20.1"
   }
 }
