Make Reddit OAuth redirect URL configurable

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -14,5 +14,7 @@ services:
     image: mongo:latest
     volumes:
       - mongoData:/data/db
+    ports:
+      - 27017:27017
 volumes:
   mongoData:
