--- a/app/public.env
+++ b/app/public.env
@@ -1,2 +1,3 @@
 REDDIT_CLIENT_ID=4lLq20IOgHBOiA
 SECRET="thisisoursecretpleasedonttellanyone"
+REDDIT_REDIRECT_URL=http://localhost:3000/connectAccounts
