Add Facebook scraper

--- a/app/public.env
+++ b/app/public.env
@@ -1,3 +1,6 @@
 REDDIT_CLIENT_ID=4lLq20IOgHBOiA
 SECRET="thisisoursecretpleasedonttellanyone"
 REDDIT_REDIRECT_URL=http://localhost:3000/connectAccounts
+
+FACEBOOK_CLIENT_ID=513242592617015
+FACEBOOK_REDIRECT_URL=http://localhost:3000/connectAccounts
