--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "express": "^4.17.1",
+    "fbgraph": "^1.4.4",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.7.11",
     "snoowrap": "^1.20.1"
